Update from 1.0.0 to 1.1.0
- Refactor: CORS
- Add: user for sw2minecraft register website
- Add: Schemas for sw2 student

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sw2minecraftbackend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "backend of sw2 minecraft site",
   "main": "index.js",
   "engines": {
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/Fakepng/sw2minecraftbackend#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "minecraft-query": "^1.0.11"
+    "minecraft-query": "^1.0.11",
+    "mongoose": "^6.2.8"
   }
 }
