--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sw2minecraftbackend",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "backend of sw2 minecraft site",
   "main": "index.js",
   "engines": {
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "minecraft-query": "^1.0.11",
     "mongoose": "^6.2.8"
   }
